# localize-anything

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
benchmarks/android-antennapod/: README.md  benchmark.json  run.py
benchmarks/ios-icecubes-xcstrings/: README.md  benchmark.json  run.py
benchmarks/ios-signal/: README.md  benchmark.json  run.py
benchmarks/stress-v01/: README.md  run.py
benchmarks/v022-android-resource-reliability/: risk_classification.py  run.py  source_sets.py
benchmarks/wesnoth-south-guard/: README.md  benchmark.json  metrics.md  prepare.py  run-metadata.template.json  verify.py
docs/: adapters.md  android-coverage-model.md  android-merged-resource-overlay.md  android-real-project-stress-matrix.md  android-v0.2.2-support.md  android-v0.2.3-support.md  antennapod-smoke-test.md  architecture-roadmap.md  architecture.md  benchmarking.md  grill-decisions.md  inspect-summary.md  public-introduction-draft.md  public-launch-checklist.md  release-checklist.md  roadmap.md  security.md  v0.1-verification.md  v0.2-iteration-plan.md  v0.3.0-real-project-workflow-plan.md
docs/assets/: README.md
docs/decisions/: 0001-protocol-first-workflow.md
protocol/: SPEC.md
protocol/examples/: acceptance.json  adapter.json  apply-plan.json  (+118 more)
runtime/: __init__.py
scripts/: smoke-antennapod.sh
tests/: test_runtime.py
(+251 files in other folders)
