[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "localize-anything"
version = "0.4.1"
description = "Reference runtime for the Localize Anything protocol"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
yaml = ["PyYAML>=6.0,<7"]

[project.scripts]
localize-anything = "runtime.localize_anything.cli:main"

[tool.setuptools.packages.find]
include = ["runtime*"]
